--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <head>
    <title> </title>
    <link rel="stylesheet" href="css/style.css" />
-   <meta name="viewport" content="width=device-width">
+   <meta name="viewport" content="width=device-width, initial-scale=1">
    <meta charset="UTF-8">
    <link rel="preconnect" href="https://fonts.googleapis.com">
    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -38,46 +38,44 @@
             </div>
          </div>
       </header>
-      <main class="main">
-
-         <section class="future">
-            <div class="container">
-               <h2 class="future__h2 h2">Что меня ждет впереди</h2>
-               <div class="future__colums">
-                  <div class="future__column">
-                     <img src="img/time.png" alt="">
-                     <h3 class="future__h3">Свободное время</h3>
-                     <p class="future__text">Мне нужно свободное время на семью и самое настоящее</p>
-                  </div>
-                  <div class="future__column">
-                     <img src="img/tropik.png" alt="">
-                     <h3 class="future__h3">Яркие путешествия</h3>
-                     <p class="future__text">Работать откуда угодно - что может быть лучше?</p>
-                  </div>
-                  <div class="future__column">
-                     <img src="img/space.png" alt="">
-                     <h3 class="future__h3">Создание ценности</h3>
-                     <p class="future__text">Нет ничего сильнее, чем жить не просто так, создавая ценность</p>
-                  </div>
+      <section class="future">
+         <div class="container">
+            <h2 class="future__h2 h2">Что меня ждет впереди</h2>
+            <div class="future__colums">
+               <div class="future__column">
+                  <img src="img/time.png" alt="">
+                  <h3 class="future__h3">Свободное время</h3>
+                  <p class="future__text">Мне нужно свободное время на семью и самое настоящее</p>
+               </div>
+               <div class="future__column">
+                  <img src="img/tropik.png" alt="">
+                  <h3 class="future__h3">Яркие путешествия</h3>
+                  <p class="future__text">Работать откуда угодно - что может быть лучше?</p>
+               </div>
+               <div class="future__column">
+                  <img src="img/space.png" alt="">
+                  <h3 class="future__h3">Создание ценности</h3>
+                  <p class="future__text">Нет ничего сильнее, чем жить не просто так, создавая ценность</p>
                </div>
             </div>
-         </section>
-
-         <section class="form">
-            <div class="container">
-               <h2 class="form__h2 h2">Форма заказа билета в будущее</h2>
-               <form action="" class="form__main">
-                  <input class="form__input" type="text" placeholder="Имя" required>
-                  <input class="form__input" type="email" placeholder="E-mail" required>
-                  <input class="form__input" type="tel" placeholder="Телефон" required>
-                  <input class="form__input" type="text" placeholder="Куда я полечу в ближайшее время?" required>
-                  <button class="button" type="submit">Двигаться к мечте!</button>
-               </form>
-            </div>
-         </section>
-      </main>
+         </div>
+      </section>
+      <section class="form">
+         <div class="container">
+            <h2 class="form__h2 h2">Форма заказа билета в будущее</h2>
+            <form action="" class="form__main">
+               <input class="form__input" type="text" placeholder="Имя" required>
+               <input class="form__input" type="email" placeholder="E-mail" required>
+               <input class="form__input" type="tel" placeholder="Телефон" required>
+               <input class="form__input" type="text" placeholder="Куда я полечу в ближайшее время?" required>
+               <button class="button" type="submit">Двигаться к мечте!</button>
+            </form>
+         </div>
+      </section>
       <footer class="footer">
-         <p>© Все мои мечты защищены моим трудолюбием</p>
+         <div class="container">
+            <p>© Все мои мечты защищены моим трудолюбием</p>
+         </div>
       </footer>
    </div>
 </body>
